# Fast_API_Unittest

./: README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1aa829f890df_add_email_verefication.py  5bded8104db0_add_user_s_roles.py  9dc0f7158239_add_user_references.py
docs/: conf.py  index.rst
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py  roles.py
static/: README.md
templates/: index.html
tests/: conftest.py  test_main.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
